Error find : inputstream (cf TODO)

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,7 +3,8 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:id="@+id/parent">
+              android:id="@+id/parent"
+              android:background="@drawable/android">
     <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -12,7 +13,8 @@
     <GridLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:layout_gravity="center_horizontal"
-            android:id="@+id/central" android:rowCount="74" android:columnCount="13">
+            android:id="@+id/central" android:rowCount="74" android:columnCount="13"
+            >
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -57,7 +59,10 @@
                 android:layout_height="81dp"
                 android:text="@string/okButton"
                 android:id="@+id/okButton" android:layout_row="73" android:layout_column="0"
-                android:layout_gravity="center_horizontal" android:layout_columnSpan="13"/>
+                android:layout_gravity="center_horizontal" android:layout_columnSpan="13"
+                android:clickable="false"
+                android:background="?android:attr/selectableItemBackground"
+                android:textSize="20dp"/>
     </GridLayout>
 </LinearLayout>
 
