--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -92,4 +92,12 @@
             android:layout_alignParentLeft="true"
             android:textSize="13dp"
             android:textColor="#000000"/>
+
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DEBUG"
+                android:id="@+id/buttonDebug"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"/>
 </RelativeLayout>
