--- a/res/layout/changepassword.xml
+++ b/res/layout/changepassword.xml
@@ -8,7 +8,7 @@
             android:layout_width="190dp"
             android:layout_height="40dp"
             android:text="Change your Password"
-            android:id="@+id/textView"
+            android:id="@+id/textViewEssenceMoyenPlein"
             android:textColor="#000000"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
@@ -19,7 +19,7 @@
             android:layout_width="150dp"
             android:layout_height="40dp"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/textView"
+            android:layout_below="@+id/textViewEssenceMoyenPlein"
             android:text="New Password"
             android:textColor="#000000"
             android:textSize="15dp" />
