--- a/res/layout/passwordreset.xml
+++ b/res/layout/passwordreset.xml
@@ -9,7 +9,7 @@
             android:layout_width="190dp"
             android:layout_height="40dp"
             android:text="Reset your Password"
-            android:id="@+id/textView"
+            android:id="@+id/textViewEssenceMoyenPlein"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:textSize="17dp"
@@ -21,7 +21,7 @@
             android:text="Enter your Email Id"
             android:id="@+id/textView2"
             android:textColor="#000000"
-            android:layout_below="@+id/textView"
+            android:layout_below="@+id/textViewEssenceMoyenPlein"
             android:layout_centerHorizontal="true"
             android:textSize="17dp"/>
 
