--- a/res/layout/register.xml
+++ b/res/layout/register.xml
@@ -8,7 +8,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Register to EssenceDatabase"
-            android:id="@+id/textView" android:layout_gravity="center"
+            android:id="@+id/textViewEssenceMoyenPlein" android:layout_gravity="center"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:textColor="#000000"/>
@@ -19,7 +19,7 @@
             android:text="First Name"
             android:id="@+id/textView2"
             android:textColor="#000000"
-            android:layout_below="@+id/textView"
+            android:layout_below="@+id/textViewEssenceMoyenPlein"
             android:layout_alignParentLeft="true"
             android:textSize="15dp"/>
 
@@ -40,7 +40,7 @@
             android:textColor="#000000"
             android:id="@+id/textView3"
             android:layout_below="@+id/textView2"
-            android:layout_toLeftOf="@+id/textView"
+            android:layout_toLeftOf="@+id/textViewEssenceMoyenPlein"
             android:textSize="15dp"/>
 
     <EditText
