--- a/res/layout/registered.xml
+++ b/res/layout/registered.xml
@@ -11,7 +11,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Congratulations. You have Sucessfully Registered..."
             android:textColor="#000000"
-            android:id="@+id/textView" android:layout_gravity="center"
+            android:id="@+id/textViewEssenceMoyenPlein" android:layout_gravity="center"
             android:textSize="15dp"
             android:textAlignment="center"/>
 
@@ -21,7 +21,7 @@
             android:layout_height="40dp"
             android:text="Your Registration Details"
             android:id="@+id/textView2"
-            android:layout_below="@+id/textView"
+            android:layout_below="@+id/textViewEssenceMoyenPlein"
             android:layout_centerHorizontal="true"/>
 
     <TextView
