--- a/res/layout/result.xml
+++ b/res/layout/result.xml
@@ -60,7 +60,8 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:id="@+id/textViewKmMoyen"
                 android:layout_alignTop="@+id/textView16"
-                android:layout_alignParentEnd="true"/>
+                android:layout_alignParentEnd="true"
+                android:textAlignment="textEnd"/>
 
         <TextView
                 android:layout_width="100dp"
@@ -203,6 +204,73 @@
                 android:layout_alignBaseline="@+id/buttonRafraichir"
                 android:layout_alignBottom="@+id/buttonRafraichir"
                 android:layout_toEndOf="@+id/textView20"/>
+
+            <TextView
+                    android:layout_width="250dp"
+                    android:layout_height="25dp"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="Prix du Km"
+                    android:id="@+id/textView22"
+                    android:layout_below="@+id/textViewPrix"
+                    android:layout_alignParentStart="true"
+                    android:textSize="15dp"
+                    android:textColor="#ffffffff"/>
+
+            <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:id="@+id/textViewPrixKm"
+                    android:layout_below="@+id/textViewPrix"
+                    android:layout_alignParentEnd="true"/>
+
+            <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:id="@+id/textViewPrixTotal"
+                    android:layout_alignBottom="@+id/textView24"
+                    android:layout_alignParentEnd="true"/>
+
+            <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:id="@+id/textViewKmTotal"
+                    android:layout_below="@+id/textView14"
+                    android:layout_alignParentEnd="true"/>
+
+            <TextView
+                    android:layout_width="250dp"
+                    android:layout_height="25dp"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="Km Total"
+                    android:id="@+id/textView23"
+                    android:textSize="15dp"
+                    android:textColor="#ffffffff"
+                    android:layout_below="@+id/textViewKmDernier"
+                    android:layout_alignParentStart="true"/>
+
+            <TextView
+                    android:layout_width="250dp"
+                    android:layout_height="25dp"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="Prix Total"
+                    android:id="@+id/textView24"
+                    android:textSize="15dp"
+                    android:textColor="#ffffffff"
+                    android:layout_below="@+id/textViewPrixKm"
+                    android:layout_alignParentStart="true"/>
+
+            <TextView
+                    android:layout_width="380dp"
+                    android:layout_height="25dp"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="Since : xx/xx/xxxx     avec      X échantillons"
+                    android:id="@+id/textView25"
+                    android:layout_below="@+id/textViewPrixTotal"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="23dp"/>
 
     </RelativeLayout>
 
