--- a/res/layout/register.xml
+++ b/res/layout/register.xml
@@ -143,7 +143,8 @@
             android:layout_height="56dp"
             android:textColor="#000000"
             android:id="@+id/register_error"
-            android:layout_below="@+id/textView2"
-            android:layout_alignEnd="@+id/fname"/>
+            android:layout_below="@+id/bktologin"
+            android:layout_alignEnd="@+id/bktologin"
+            android:layout_marginTop="67dp"/>
 
 </RelativeLayout>
