--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -32,13 +32,13 @@
                 android:layout_width="250dp"
                 android:layout_height="65dp"
                 android:id="@+id/editTextKm" android:layout_row="53" android:layout_column="12"
-                android:inputType="number|numberDecimal"
                 android:editable="true"
                 android:background="@android:color/transparent"
                 android:enabled="true"
                 android:layout_marginLeft="8dp"
                 android:layout_below="@+id/textViewKm"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                android:inputType="number"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
                 android:layout_width="250dp"
                 android:layout_height="65dp"
                 android:id="@+id/editTextEuro" android:layout_row="65" android:layout_column="12"
-                android:inputType="numberDecimal"
+                android:inputType="number"
                 android:editable="true"
                 android:autoText="false"
                 android:background="@android:color/transparent"
@@ -75,13 +75,13 @@
                 android:layout_width="250dp"
                 android:layout_height="65dp"
                 android:id="@+id/editTextEuroLitre" android:layout_row="69" android:layout_column="12"
-                android:inputType="numberDecimal"
                 android:editable="true"
                 android:background="@android:color/transparent"
                 android:enabled="true"
                 android:layout_marginLeft="8dp"
                 android:layout_below="@+id/textViewEssenceMoyenPlein"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                android:inputType="number"/>
 
         <Button
                 android:layout_width="176dp"
